[gd_scene load_steps=4 format=3 uid="uid://cqlmq458d551s"]

[ext_resource type="Script" path="res://scripts/weapons/projectiles/projectile.gd" id="1_csafm"]
[ext_resource type="Texture2D" uid="uid://dyinpxajpgs83" path="res://img/projectile_blue.png" id="1_y7ouk"]

[sub_resource type="SphereShape3D" id="SphereShape3D_2tthy"]
radius = 0.25

[node name="Projectile" type="Area3D" node_paths=PackedStringArray("projectile_lifetime_timer")]
collision_layer = 8
collision_mask = 243
script = ExtResource("1_csafm")
projectile_lifetime_timer = NodePath("ProjectileLifetimeTimer")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_2tthy")

[node name="Sprite3D" type="Sprite3D" parent="."]
billboard = 1
texture_filter = 0
texture = ExtResource("1_y7ouk")

[node name="ProjectileLifetimeTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ProjectileLifetimeTimer" to="." method="_on_projectile_lifetime_timer_timeout"]
